--- a/BIGFISH_БД/BIGFISH_БД.csproj
+++ b/BIGFISH_БД/BIGFISH_БД.csproj
@@ -171,6 +171,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AdminFirstWindow.xaml.cs">
+      <DependentUpon>AdminFirstWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AdminMainWindow.xaml.cs">
+      <DependentUpon>AdminMainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AdvanceFoundry.xaml.cs">
       <DependentUpon>AdvanceFoundry.xaml</DependentUpon>
     </Compile>
@@ -291,6 +297,14 @@
     <Compile Include="User1.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Page Include="AdminFirstWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AdminMainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AdvanceFoundry.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
