--- a/BIGFISH_БД/packages.config
+++ b/BIGFISH_БД/packages.config
@@ -11,6 +11,8 @@
   <package id="EPPlus" version="8.0.5" targetFramework="net481" />
   <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net481" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net481" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="MaterialDesignColors" version="5.2.1" targetFramework="net481" />
   <package id="MaterialDesignThemes" version="5.2.1" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net481" />
