--- a/BIGFISH_БД/BIGFISH_БД.csproj
+++ b/BIGFISH_БД/BIGFISH_БД.csproj
@@ -291,6 +291,9 @@
     <Compile Include="Packers.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="StatisticArticlePage.xaml.cs">
+      <DependentUpon>StatisticArticlePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StatisticPage.xaml.cs">
       <DependentUpon>StatisticPage.xaml</DependentUpon>
     </Compile>
@@ -400,6 +403,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="PackerPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StatisticArticlePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
